#100: Implement fiscal years and their limitations

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/services/newEntityFinanceAccounts.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/services/newEntityFinanceAccounts.properties
@@ -287,12 +287,14 @@ new.entity.finance.account.SUM.other.assets.account.number=16999
 new.entity.finance.account.SUM.other.assets.sum.from=16000
 new.entity.finance.account.SUM.other.assets.sum.to=16999
 
-new.entity.finance.account.HEADLINE.liquid.assets=Liquid.assets
+new.entity.finance.account.HEADLINE.liquid.assets=Liquid assets
 new.entity.finance.account.HEADLINE.liquid.assets.account.number=17000
+
 new.entity.finance.account.ASSET.liquid.assets.cash=Cash
 new.entity.finance.account.ASSET.liquid.assets.cash.account.number=17100
 new.entity.finance.account.ASSET.liquid.assets.bank.account=Bank account
 new.entity.finance.account.ASSET.liquid.assets.bank.account.account.number=17200
+
 new.entity.finance.account.SUM.liquid.assets=Liquid assets total
 new.entity.finance.account.SUM.liquid.assets.account.number=17998
 new.entity.finance.account.SUM.liquid.assets.sum.from=17000
@@ -310,8 +312,12 @@ new.entity.finance.account.HEADLINE.equity=Equity
 new.entity.finance.account.HEADLINE.equity.account.number=21000
 new.entity.finance.account.LIABILITY.share.capital=Share capital
 new.entity.finance.account.LIABILITY.share.capital.account.number=21100
-new.entity.finance.account.LIABILITY.retained.earnings=Retained yearnings
-new.entity.finance.account.LIABILITY.retained.earnings.account.number=21200
+
+new.entity.finance.account.SYSTEM.retained.earnings=Retained yearnings
+new.entity.finance.account.SYSTEM.retained.earnings.account.number=21200
+new.entity.finance.account.SYSTEM.retained.earnings.account.type=YEAR_END
+
+
 new.entity.finance.account.SUM.equity=Equity total
 new.entity.finance.account.SUM.equity.account.number=21999
 new.entity.finance.account.SUM.equity.sum.from=21000
