--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -123,6 +123,7 @@ FinanceAccountType.PROFIT=Profit
 FinanceAccountType.EXPENSE=Expense
 FinanceAccountType.ASSET=Asset
 FinanceAccountType.LIABILITY=Liability
+FinanceAccountType.YEAR_END=Retained earnings
 FinanceAccountType.CATEGORY=Category
 FinanceAccountType.HEADLINE=Headline
 FinanceAccountType.SUM=Sum
@@ -134,4 +135,6 @@ FiscalYearStatus.LOCKED=Closed
 ReportCompareType.COMPARE_WITH_SAME_PERIOD_LAST_YEAR=Same period last year
 ReportCompareType.COMPARE_YEAR_TO_DATE=Year to date
 ReportCompareType.COMPARE_TO_BUDGET=Budget
+
+primo.posting=Primo posting
 
