--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -124,6 +124,7 @@ FinanceAccountType.PROFIT=Indt\u00E6gt
 FinanceAccountType.EXPENSE=Udgift
 FinanceAccountType.ASSET=Aktiv
 FinanceAccountType.LIABILITY=Passiv
+FinanceAccountType.YEAR_END=Overf\u00F8rt resultat
 FinanceAccountType.CATEGORY=Kategori
 FinanceAccountType.HEADLINE=Overskrift
 FinanceAccountType.SUM=Sum
@@ -140,4 +141,6 @@ datatable.export-file-name=eksporter
 ReportCompareType.COMPARE_WITH_SAME_PERIOD_LAST_YEAR=Samme periode sidste \u00E5r
 ReportCompareType.COMPARE_YEAR_TO_DATE=\u00C5r til dato
 ReportCompareType.COMPARE_TO_BUDGET=Budget
+
+primo.posting=Primo postering
 
