--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/FiscalYearPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/FiscalYearPage.utf8.properties
@@ -15,9 +15,10 @@ dates.cross.another.fiscal.year=Dates cross another fiscal year
 year.must.be.after.last.year=
 can.only.open.if.next.open=Can only open if next year is open
 can.only.close.if.previous.closed=Can only closed if previous is closed
+next.fiscal.year.not.found=Next fiscal year not found
 
 year.opened=Year opened
-year.close=Year closed
+year.closed=Year closed
 
 daysBetween=Days in year
 
