--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/FiscalYearPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/FiscalYearPage_da.utf8.properties
@@ -15,9 +15,10 @@ dates.cross.another.fiscal.year=Datoerne krydser et eksisterende \u00E5r
 year.must.be.after.last.year=TODO
 can.only.open.if.next.open=Kan kun \u00E5bne hvis det n\u00E6ste regnskabs\u00E5r er \u00E5bent
 can.only.close.if.previous.closed=Kan kun lukke hvis det forrige regnskabs\u00E5r er lukket
+next.fiscal.year.not.found=N\u00E6ste regnskabs\u00E5r kunne ikke findes.
 
 year.opened=\u00C5r \u00E5bnet
-year.close=\u00C5r lukket
+year.closed=\u00C5r lukket
 
 daysBetween=Dage i \u00E5ret
 
