#100: Implement fiscal years and their limitations

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.utf8.properties
@@ -27,4 +27,6 @@ must.choose.account.for.vat=If you choose a vattype you must also choose a finan
 following.postings.did.not.balance=The following finance postings did not balance {0}
 following.postings.where.not.in.open.fiscal.year=The following finance postings are not in a open fiscal year {0}
 
+finance.postings.where.booked=Finance postings where booked
+
 datatable.no-records-found=No postings in daily ledger
