--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage_da.utf8.properties
@@ -27,4 +27,6 @@ must.choose.account.for.vat=Hvis du v\u00E6lger momstype, skal du ogs\u00E5 v\u0
 following.postings.did.not.balance=De f\u00F8lgende posteringer stemte ikke {0}
 following.postings.where.not.in.open.fiscal.year=De f\u00F8lgende posteringer er ikke i et \u00E5bent regnskabs\u00E5r {0}
 
+finance.postings.where.booked=Finansposteringer er blevet bogf\u00F8rt
+
 datatable.no-records-found=Ingen posteringer i kasseklade
