#131: Reports must be inside same year

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage.utf8.properties
@@ -12,3 +12,5 @@ accountFrom=From account
 accountTo=To account
 
 compare.to=Compare to
+
+dates.not.within.same.fiscal.year=Dates not within same fiscal year
