--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage_da.utf8.properties
@@ -13,3 +13,5 @@ accountFrom=Fra konto
 accountTo=Til konto
 
 compare.to=Sammenlign med
+
+dates.not.within.same.fiscal.year=Datoerne er ikke inden for det samme regnskabs\u00E5r
