#101: Be able to lock financeaccounts

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.utf8.properties
@@ -30,3 +30,6 @@ following.postings.where.not.in.open.fiscal.year=The following finance postings 
 finance.postings.where.booked=Finance postings where booked
 
 datatable.no-records-found=No postings in daily ledger
+
+reverse.account.is.locked=Reverse account is locked
+account.is.locked=Account is locked
