--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage_da.utf8.properties
@@ -30,3 +30,6 @@ following.postings.where.not.in.open.fiscal.year=De f\u00F8lgende posteringer er
 finance.postings.where.booked=Finansposteringer er blevet bogf\u00F8rt
 
 datatable.no-records-found=Ingen posteringer i kasseklade
+
+reverse.account.is.locked=Modsat konto er l\u00E5st
+account.is.locked=Konto er l\u00E5st
