--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage_da.utf8.properties
@@ -12,6 +12,8 @@ finance.account.is.in.use=Finanskontoen er i brug og kan ikke slettes.
 changes.has.been.saved=\u00C6ndringerne er blevet gemt
 finance.account.was.never.saved=Finanskontoen var ikke gemt
 
+locked=L\u00E5st
+
 sum.from=Sum fra
 sumFrom=Sum fra
 sum.to=Sum til
