--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage.utf8.properties
@@ -12,6 +12,8 @@ finance.account.is.in.use=Finance account is in use, and cannot be deleted
 changes.has.been.saved=Changes have been saved
 finance.account.was.never.saved=Finance account was never saved
 
+locked=Locked
+
 sum.from=Sum from
 sumFrom=Sum from
 sum.to=Sum to
