--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/FiscalYearPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/FiscalYearPage_da.utf8.properties
@@ -5,8 +5,8 @@ start=Start dato
 end=Slut dato
 
 fiscal.year.was.deleted=Regnskabs\u00E5ret blev slettet
-fiscal.year.is.in.use==Regnskabs\u00E5ret indeholder posteringer
-fiscal.year.was.never.saved==Regnskabs\u00E5ret var aldrig gemt
+fiscal.year.is.in.use=Regnskabs\u00E5ret indeholder posteringer
+fiscal.year.was.never.saved=Regnskabs\u00E5ret var aldrig gemt
 changes.has.been.saved=\u00C6ndringerne er blevet gemt
 fiscal.year.dates.are.in.use=Regnskabs\u00E5ret indeholder posteringer i de gamle datoer
 
