#136: Add more text to signup confirmation

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/ConfirmPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/ConfirmPage_da.utf8.properties
@@ -4,3 +4,4 @@ password=Kodeord
 confirm.account.for.user=Konto aktiveret for bruger
 confirm.account=Bekr\u00E6ft
 failure.to.confirm.account.for.user=Oplysningerne var ikke korrekt
+login.link.text=Tryk her for at g\u00E5 til login
