--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/ConfirmPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/ConfirmPage.utf8.properties
@@ -4,3 +4,4 @@ password=Password
 confirm.account.for.user=Account activated for user
 confirm.account=Confirm
 failure.to.confirm.account.for.user=The supplied information was not correct
+login.link.text=Push here to go to the login page
