--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/SignUpPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/SignUpPage.utf8.properties
@@ -12,3 +12,8 @@ password.not.adequate=Password must be between 8 and 25 characters long, consist
 username.not.adequate=Username must be between 8 and 25 characters long
 
 username.all.ready.exists=Username is all ready taken
+email.all.ready.in.use=Email is allready in use
+
+
+what.to.do.now=You should have received a confirmation email with a activationlink, push the link in the mail. \
+               You will then be taken to a confirmation page, where you should enter your username and password to confirm your account.
