--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/SignUpPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/SignUpPage_da.utf8.properties
@@ -11,4 +11,8 @@ username.not.adequate=Brugernavn skal v\u00E6re mellem 8 og 25 tegn langt
 not.equal.passwords=Kodeordene er ikke ens
 password.not.adequate=Kodeordet skal v\u00E6re mellem 8 og 25 tegn langt, best\u00E5 af mindst 1 tal, et stort bogstav og et lille bogstav.
 
-username.all.ready.exists=Brugernavnet er allerede taget.
+username.all.ready.exists=Brugernavnet  er allerede taget.
+email.all.ready.in.use=Emailen er allerede i brug p\u00E5 en anden bruger.
+
+what.to.do.now=Du har f\u00E5et tilsendt en mail med et aktiveringslink, tryk p\u00E5 linket i mailen. <br> \
+  Du kommer s\u00E5 til en bekr\u00E6ftelsesside hvor du skal indtaste dit brugernavn og kodeord for at bekr\u00E6fte din konto
