#128: Create current result in equity section of balance.

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/services/newEntityFinanceAccounts.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/services/newEntityFinanceAccounts.properties
@@ -317,6 +317,10 @@ new.entity.finance.account.SYSTEM.retained.earnings=Retained yearnings
 new.entity.finance.account.SYSTEM.retained.earnings.account.number=21200
 new.entity.finance.account.SYSTEM.retained.earnings.account.type=YEAR_END
 
+new.entity.finance.account.SYSTEM.current.result=Current year result
+new.entity.finance.account.SYSTEM.current.result.account.number=21300
+new.entity.finance.account.SYSTEM.current.result.account.type=CURRENT_RESULT
+
 
 new.entity.finance.account.SUM.equity=Equity total
 new.entity.finance.account.SUM.equity.account.number=21999
