--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -124,9 +124,11 @@ FinanceAccountType.EXPENSE=Expense
 FinanceAccountType.ASSET=Asset
 FinanceAccountType.LIABILITY=Liability
 FinanceAccountType.YEAR_END=Retained earnings
+FinanceAccountType.CURRENT_RESULT=Current year result
 FinanceAccountType.CATEGORY=Category
 FinanceAccountType.HEADLINE=Headline
 FinanceAccountType.SUM=Sum
+FinanceAccountType.BALANCE_CHECK=Balance check
 
 FiscalYearStatus=Status
 FiscalYearStatus.OPEN=Open
