--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -125,9 +125,11 @@ FinanceAccountType.EXPENSE=Udgift
 FinanceAccountType.ASSET=Aktiv
 FinanceAccountType.LIABILITY=Passiv
 FinanceAccountType.YEAR_END=Overf\u00F8rt resultat
+FinanceAccountType.CURRENT_RESULT=\u00C5rets resultat
 FinanceAccountType.CATEGORY=Kategori
 FinanceAccountType.HEADLINE=Overskrift
 FinanceAccountType.SUM=Sum
+FinanceAccountType.BALANCE_CHECK=Balance check
 
 fiscalYearStatus=Status
 FiscalYearStatus.OPEN=\u00C5ben
