--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/services/newEntityFinanceAccounts.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/services/newEntityFinanceAccounts.properties
@@ -380,10 +380,9 @@ new.entity.finance.account.SUM.liabilities.account.number=29999
 new.entity.finance.account.SUM.liabilities.sum.from=20000
 new.entity.finance.account.SUM.liabilities.sum.to=29999
 
-new.entity.finance.account.SUM.check=BALANCE CHECK
-new.entity.finance.account.SUM.check.account.number=30000
-new.entity.finance.account.SUM.check.sum.from=0
-new.entity.finance.account.SUM.check.sum.to=30000
+new.entity.finance.account.SYSTEM.check=BALANCE CHECK
+new.entity.finance.account.SYSTEM.check.account.number=30000
+
 
 
 
