--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/services/newEntityFinanceAccounts.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/services/newEntityFinanceAccounts.properties
@@ -353,8 +353,16 @@ new.entity.finance.account.LIABILITY.bank.debt.credit.account.number=24100
 new.entity.finance.account.LIABILITY.trade.creditors=Trade creditors
 new.entity.finance.account.LIABILITY.trade.creditors.account.number=25100
 
+new.entity.finance.account.HEADLINE.vat=VAT
+new.entity.finance.account.HEADLINE.vat.account.number=26000
+
 new.entity.finance.account.LIABILITY.vat.reconciliation=VAT reconciliation
 new.entity.finance.account.LIABILITY.vat.reconciliation.account.number=26400
+
+new.entity.finance.account.SUM.vat=VAT total
+new.entity.finance.account.SUM.vat.account.number=26500
+new.entity.finance.account.SUM.vat.sum.from=26000
+new.entity.finance.account.SUM.vat.sum.to=26500
 
 new.entity.finance.account.LIABILITY.other.debt.employee.tax.a-skat=Primary taxes
 new.entity.finance.account.LIABILITY.other.debt.employee.tax.a-skat.account.number=27100
