#152: ChartOfFinanceAccounts show sum interval instead of reverse account

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage.utf8.properties
@@ -19,6 +19,8 @@ sumFrom=Sum from
 sum.to=Sum to
 sumTo=Sum to
 
+sum.from.to=Suminterval
+
 number.all.ready.exists=Account number allready exists
 number.to.long=Account number to long
 
