--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage_da.utf8.properties
@@ -19,6 +19,8 @@ sumFrom=Sum fra
 sum.to=Sum til
 sumTo=Sum til
 
+sum.from.to=Sum interval
+
 number.all.ready.exists=Kontonummer allerede er i brug
 number.to.long=Kontonummer er for langt
 
