#145: Create small arrows on report page to switch one year ahed

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage.utf8.properties
@@ -13,4 +13,7 @@ accountTo=To account
 
 compare.to=Compare to
 
+plus.one.year=Next year same time
+minus.one.year=Last year same time
+
 dates.not.within.same.fiscal.year=Dates not within same fiscal year
