--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage_da.utf8.properties
@@ -14,4 +14,7 @@ accountTo=Til konto
 
 compare.to=Sammenlign med
 
+plus.one.year=N\u00E6ste \u00E5r samme interval
+minus.one.year=Forrige \u00E5r samme interval
+
 dates.not.within.same.fiscal.year=Datoerne er ikke inden for det samme regnskabs\u00E5r
