#115: Able to not show 0-sum accounts in reports

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage.utf8.properties
@@ -12,6 +12,7 @@ accountFrom=From account
 accountTo=To account
 
 compare.to=Compare to
+hide.accounts.without.sum=Hide accounts with 0 sum
 
 plus.one.year=Next year same time
 minus.one.year=Last year same time
