--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage_da.utf8.properties
@@ -13,6 +13,7 @@ accountFrom=Fra konto
 accountTo=Til konto
 
 compare.to=Sammenlign med
+hide.accounts.without.sum=Skjul konti uden sum
 
 plus.one.year=N\u00E6ste \u00E5r samme interval
 minus.one.year=Forrige \u00E5r samme interval
