#75: Create Financeaccounts report page

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -25,6 +25,7 @@ bookkeeping.daybook=Daily ledger
 
 reports=Reports
 reports.balance=Balance
+reports.finance.accounts=Finance accounts
 
 #Countries
 Country.DNK=Denmark
