--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -25,6 +25,7 @@ bookkeeping.daybook=Kasseklade
 
 reports=Rapporter
 reports.balance=Saldobalance
+reports.finance.accounts=Finanskonti
 
 #Countries
 Country.DNK=Danmark
