#75: Create Financeaccounts report page

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/FinanceAccountsPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/FinanceAccountsPage.utf8.properties
@@ -16,7 +16,8 @@ dateTo=To date
 accountFrom=From account
 accountTo=To account
 
-hide.accounts.without.sum=Hide accounts with no transactions
+hide.accounts.without.sum=Hide accounts with 0 sum
+hide.accounts.without.transactions=Hide accounts without transactions
 
 plus.one.year=Next year same time
 minus.one.year=Last year same time
