--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/FinanceAccountsPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/FinanceAccountsPage_da.utf8.properties
@@ -17,7 +17,8 @@ accountFrom=Fra konto
 accountTo=Til konto
 
 compare.to=Sammenlign med
-hide.accounts.without.sum=Skjul konti uden transaktioner
+hide.accounts.without.sum=Skjul konti uden sum
+hide.accounts.without.transactions=Skjul konti uden transaktioner
 
 plus.one.year=N\u00E6ste \u00E5r samme interval
 minus.one.year=Forrige \u00E5r samme interval
