#161: Finance account page should show feedback when no accounts found

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/FinanceAccountsPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/FinanceAccountsPage.utf8.properties
@@ -23,3 +23,5 @@ plus.one.year=Next year same time
 minus.one.year=Last year same time
 
 dates.not.within.same.fiscal.year=Dates not within same fiscal year
+
+no.accounts.found=No accounts found with chosen arguments
