--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/FinanceAccountsPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/FinanceAccountsPage_da.utf8.properties
@@ -24,3 +24,5 @@ plus.one.year=N\u00E6ste \u00E5r samme interval
 minus.one.year=Forrige \u00E5r samme interval
 
 dates.not.within.same.fiscal.year=Datoerne er ikke inden for det samme regnskabs\u00E5r
+
+no.accounts.found=Ingen konti fundet med de valgte argumenter
