#157: Watch postings in modal window

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -12,6 +12,8 @@ button.refresh=Refresh
 button.open=Open
 button.close=Close
 
+tooltip.postings=Postings
+
 #Links
 settings=Settings
 settings.base.data=Base data
