--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -12,6 +12,8 @@ button.refresh=Genopfrisk
 button.open=\u00C5ben
 button.close=Luk
 
+popup.postings=Posteringer
+
 #Links
 settings=Indstillinger
 settings.base.data=Stamdata
