--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/modal/PostingsModal$Page.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/modal/PostingsModal$Page.utf8.properties
@@ -1,4 +1,5 @@
 date=Date
+account=Account
 text=Description
 vatType.name=Vat type
 amount=Amount
@@ -10,3 +11,4 @@ postings.flip=Flip
 postings.reverse.help=Create reverse postings in dailyledger
 postings.copy.help=Copy the postings to the dailyledger
 postings.flip.help=Flip the postings so the balance is the other way
+
