--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/modal/PostingsModal$Page_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/modal/PostingsModal$Page_da.utf8.properties
@@ -1,4 +1,5 @@
 date=Dato
+account=Konto
 text=Beskrivelse
 vatType.name=Momstype
 amount=Bel\u00F8b
@@ -10,3 +11,4 @@ postings.flip=Modsat
 postings.reverse.help=Tilbagef\u00F8r posteringerne
 postings.copy.help=Kopier posteringerne
 postings.flip.help=Vend posteringerne om
+
