--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/LoggedInPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/LoggedInPage.utf8.properties
@@ -2,3 +2,5 @@ title=Titel
 description=Description is missing!!!!
 
 legal.entity=Legal entity
+
+postings.have.been.added.to.daily.ledger=The postings have been placed in the daily ledger
