--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/LoggedInPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/LoggedInPage_da.utf8.properties
@@ -3,3 +3,4 @@ description=Beskrivelse mangler!!!
 
 legal.entity=Juridisk enhed
 
+postings.have.been.added.to.daily.ledger=Posteringerne er blevet lagt i klassekladen
