--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/PricingPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/PricingPage_da.utf8.properties
@@ -2,14 +2,14 @@ title=Priser
 info.text.heading=Hvor meget koster det?
 info.text=Vores priser er yderst rimelige, du betaler kun for dit forbrug. <br><br>\
   Der er ingen tilk\u00F8bsmoduller eller gebyrer ved ekstra brugere. <br><br>\
-  Hvis du har under 300 posteringer&sup1; om \u00E5ret er Eazy regnskab gratis&sup2;. <br>\
-  Hvis du har mellem 300 og 3000 posteringer&sup1; om \u00E5ret betaler du 30 DKK om m\u00E5neden.<br>\
-  Har du over 3000 posteringer&sup1; om \u00E5ret betaler du 70 DKK om m\u00E5neden. \
+  Hvis du har under 300 posteringer&sup1; pr. regnskabs\u00E5r er Eazy regnskab gratis&sup2;. <br>\
+  Hvis du har mellem 300 og 3000 posteringer&sup1; pr. regnskabs\u00E5r betaler du 30 DKK om m\u00E5neden.<br>\
+  Har du over 3000 posteringer&sup1; pr. regnskabs\u00E5r betaler du 70 DKK om m\u00E5neden. \
   <br>\
  <table>\
     <tr>\
         <td class="span2"> \
-            Posteringer pr. \u00E5r\
+            Posteringer pr. regnskabs\u00E5r\
         </td>\
         <td class="span2"> \
             Pris\
@@ -53,4 +53,4 @@ info.text=Vores priser er yderst rimelige, du betaler kun for dit forbrug. <br><
 <br>\
 <br>\
   &sup1; 3 posteringer svarer ca. til 1 bilag. <br>\
-  &sup2; Visse funktioner er kun tilg\u00E6ngelige for betalende brugere. \
+  &sup2; Visse funktioner er kun tilg\u00E6ngelige for betalende brugere. \uFFFD
