#170: Implement reverse, copy and flip postings

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/modal/PostingsModal$Page.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/modal/PostingsModal$Page.utf8.properties
@@ -4,11 +4,11 @@ text=Description
 vatType.name=Vat type
 amount=Amount
 
-postings.reverse=Reversal
+postings.regret=Regret
 postings.copy=Copy
 postings.flip=Flip
 
-postings.reverse.help=Create reverse postings in dailyledger
+postings.regret.help=Create reverse postings in dailyledger
 postings.copy.help=Copy the postings to the dailyledger
 postings.flip.help=Flip the postings so the balance is the other way
 
