--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/modal/PostingsModal$Page_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/modal/PostingsModal$Page_da.utf8.properties
@@ -4,11 +4,11 @@ text=Beskrivelse
 vatType.name=Momstype
 amount=Bel\u00F8b
 
-postings.reverse=Tilbagef\u00F8r
+postings.regret=Tilbagef\u00F8r
 postings.copy=Kopier
 postings.flip=Modsat
 
-postings.reverse.help=Tilbagef\u00F8r posteringerne
+postings.regret.help=Tilbagef\u00F8r posteringerne
 postings.copy.help=Kopier posteringerne
 postings.flip.help=Vend posteringerne om
 
