#173: Create tooltip on dailyledger panel postings for finance account name/number

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/modal/PostingsModal$Page.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/modal/PostingsModal$Page.utf8.properties
@@ -8,7 +8,7 @@ postings.regret=Regret
 postings.copy=Copy
 postings.flip=Flip
 
-postings.regret.help=Create reverse postings in dailyledger
-postings.copy.help=Copy the postings to the dailyledger
-postings.flip.help=Flip the postings so the balance is the other way
+postings.regret.help=Create reverse postings in daily ledger
+postings.copy.help=Copy the postings to the daily ledger
+postings.flip.help=Flip the postings in the daily ledger
 
