--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/modal/PostingsModal$Page_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/modal/PostingsModal$Page_da.utf8.properties
@@ -8,7 +8,7 @@ postings.regret=Tilbagef\u00F8r
 postings.copy=Kopier
 postings.flip=Modsat
 
-postings.regret.help=Tilbagef\u00F8r posteringerne
-postings.copy.help=Kopier posteringerne
-postings.flip.help=Vend posteringerne om
+postings.regret.help=Tilbagef\u00F8r posteringerne i kassekladen
+postings.copy.help=Kopier posteringerne i kassekladen
+postings.flip.help=Vend posteringerne om i kassekladen
 
