#172: Create clear dailyledger button.

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -11,6 +11,7 @@ button.loading=Loading...
 button.refresh=Refresh
 button.open=Open
 button.close=Close
+button.clear.daily.ledger=Clear daily ledger
 
 tooltip.postings=Postings
 
