--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -11,6 +11,7 @@ button.loading=Indl\u00E6ser...
 button.refresh=Genopfrisk
 button.open=\u00C5ben
 button.close=Luk
+button.clear.daily.ledger=Ryd kassekladen
 
 popup.postings=Posteringer
 
