#29 Add modal confirmation dialog to clear daily ledger

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -12,6 +12,10 @@ button.refresh=Genopfrisk
 button.open=\u00C5ben
 button.close=Luk
 button.clear.daily.ledger=Ryd kassekladen
+button.yes=Ja
+button.no=Nej
+
+modal.title.confirm=Bekr\u00E6ft
 
 popup.postings=Posteringer
 
