--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.utf8.properties
@@ -33,3 +33,5 @@ datatable.no-records-found=No postings in daily ledger
 
 reverse.account.is.locked=Reverse account is locked
 account.is.locked=Account is locked
+
+do.you.want.clear.daily.ledger=Are you sure you want to clear daily ledger?
