--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage_da.utf8.properties
@@ -33,3 +33,5 @@ datatable.no-records-found=Ingen posteringer i kasseklade
 
 reverse.account.is.locked=Modsat konto er l\u00E5st
 account.is.locked=Konto er l\u00E5st
+
+do.you.want.clear.daily.ledger=Er du sikker p\u00E5 du vil slette alle posteringer i kladden?
