--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -12,6 +12,10 @@ button.refresh=Refresh
 button.open=Open
 button.close=Close
 button.clear.daily.ledger=Clear daily ledger
+button.yes=Yes
+button.no=No
+
+modal.title.confirm=Confirm
 
 tooltip.postings=Postings
 
