#6 Create tags for SEO optimazation

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/AboutPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/AboutPage.utf8.properties
@@ -1,5 +1,8 @@
-title=About us
+title=Eazy accounting - About us
 info.text.heading=Why should bookkeeping be difficult?
 info.text=At Eazy accounting we believe that bookkeeping should be "eazy", fast and accesseble from everywhere. \
             Thats why we have developed an accounting program which can be accessed from everywhere, as long as you \
             have an internet connection.
+
+meta.keywords=about us
+meta.description=Eazy accounting - About us
