--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/ConfirmPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/ConfirmPage.utf8.properties
@@ -1,4 +1,4 @@
-title=Confirm account
+title=Eazy accounting - Confirm account
 username=Username
 password=Password
 confirm.account.for.user=Account activated for user
