--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/ConfirmPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/ConfirmPage_da.utf8.properties
@@ -1,4 +1,4 @@
-title=Bekr\u00E6ft din konto
+title=Eazyregnskab - Bekr\u00E6ft din konto
 username=Brugernavn
 password=Kodeord
 confirm.account.for.user=Konto aktiveret for bruger
