--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/ContactPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/ContactPage_da.utf8.properties
@@ -1,3 +1,3 @@
-title=Kontakt
+title=Eazyregnskab - Kontakt
 info.text.heading=Kontakt os
 info.text=Har du brug for at kontakt os kan skrive til os p\u00E5 kontakt@eazyit.dk
