--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/HomePage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/HomePage.utf8.properties
@@ -1,4 +1,4 @@
-title=Eazy account
+title=Eazy accounting
 lead.text=Accounting made eazy
 get.started.today=Get started today
 view.details=View details
