--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/PricingPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/PricingPage.utf8.properties
@@ -1,4 +1,4 @@
-title=Pricing
+title=Eazy accounting - Pricing
 info.text.heading=Whats the cost?
 info.text=Our prices er very reasonable, you only pay for your usage.<br><br>\
           There are not extra add on modules or fees for extra users.<br><br>\
@@ -54,3 +54,6 @@ info.text=Our prices er very reasonable, you only pay for your usage.<br><br>\
           <br>\
             &sup1; 3 posterings is roughly 1 ledger. <br>\
             &sup2; Certain functions are only availeble for paying users. \uFFFD
+
+meta.keywords=prices
+meta.description=Eazy accounting - Whats the cost?
