--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/PricingPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/PricingPage_da.utf8.properties
@@ -1,4 +1,4 @@
-title=Priser
+title=Eazyregnskab - Priser
 info.text.heading=Hvor meget koster det?
 info.text=Vores priser er yderst rimelige, du betaler kun for dit forbrug. <br><br>\
   Der er ingen tilk\u00F8bsmoduller eller gebyrer ved ekstra brugere. <br><br>\
@@ -54,3 +54,6 @@ info.text=Vores priser er yderst rimelige, du betaler kun for dit forbrug. <br><
 <br>\
   &sup1; 3 posteringer svarer ca. til 1 bilag. <br>\
   &sup2; Visse funktioner er kun tilg\u00E6ngelige for betalende brugere. \uFFFD
+
+meta.keywords=priser
+meta.description=Eazyregnskab, hvad koster det?
