--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/SignUpPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/SignUpPage.utf8.properties
@@ -1,4 +1,4 @@
-title=Sign up
+title=Eazy accounting - Sign up
 username=Username
 password=Password
 repeat.password=Repeat password
@@ -17,3 +17,6 @@ email.all.ready.in.use=Email is allready in use
 
 what.to.do.now=You should have received a confirmation email with a activationlink, push the link in the mail. \
                You will then be taken to a confirmation page, where you should enter your username and password to confirm your account.
+
+meta.keywords=signup
+meta.description=Eazy accounting - Sign up
