--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/SignUpPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/SignUpPage_da.utf8.properties
@@ -1,4 +1,4 @@
-title=Tilmeld dig
+title=Eazyregnskab - Tilmeld dig
 username=Brugernavn
 password=Kodeord
 repeat.password=Gentag kodeord
@@ -16,3 +16,6 @@ email.all.ready.in.use=Emailen er allerede i brug p\u00E5 en anden bruger.
 
 what.to.do.now=Du har f\u00E5et tilsendt en mail med et aktiveringslink, tryk p\u00E5 linket i mailen. <br> \
   Du kommer s\u00E5 til en bekr\u00E6ftelsesside hvor du skal indtaste dit brugernavn og kodeord for at bekr\u00E6fte din konto
+
+meta.keywords=tilmeld
+meta.description=Eazyregnskab - Tilmeld dig
