--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/WhatYouGetPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/WhatYouGetPage.utf8.properties
@@ -1,6 +1,10 @@
-title=What you get
+title=Eazy accounting - What you get
 info.text.heading=All this and much more
 info.text=With Eazy accounting you get an eazy and manageable bookkeeping program.\
   In addition you can display mange different reports which give a quick overview over \
  your business financiel situation.
 
+meta.keywords=what you get
+meta.description=With Eazy accounting you get an eazy and manageable bookkeeping program.\
+                   In addition you can display mange different reports which give a quick overview over \
+                  your business financiel situation.
