--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/AppBasePage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/AppBasePage.utf8.properties
@@ -11,3 +11,5 @@ title=PAGE TITLE MISSING
 
 
 
+meta.keywords=eazy accounting bookkeeping annual report
+meta.description=Eazy accounting is a cheap online accounting program designed for all to use.
