--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/AppBasePage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/AppBasePage_da.utf8.properties
@@ -11,4 +11,6 @@ title=SIDE TITEL MANGLER
 
 
 
+meta.keywords=nemt regnskab bogf\u00F8ring \u00E5rsrapport
+meta.description=Eazyregnskab er et online bogf\u00F8ringsprogram designet til at alle kan bruge det
 
