--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/ContactPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/ContactPage.utf8.properties
@@ -1,3 +1,3 @@
-title=Contact
+title=Eazy accounting - Contact
 info.text.heading=Contact us
 info.text=If you need to contact us, you can write to contact@eazyit.dk
