--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/ForAdministratorsPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/ForAdministratorsPage_da.utf8.properties
@@ -1,4 +1,8 @@
-title=For administratorer
+title=Eazyregnskab - For administratorer
 info.text.heading=Du kommer t\u00E6ttere p\u00E5 dine kunder
 info.text=Som bogholder,revisor eller lign. kan du f\u00E5 et administrator login til dine kunders konto \
   og direkte f\u00F8lge med i deres regnskab. Slip for at sende papir og mails med bilag frem og tilbage.
+
+meta.keywords=Administratorer
+meta.description=Som bogholder,revisor eller lign. kan du f\u00E5 et administrator login til dine kunders konto \
+                   og direkte f\u00F8lge med i deres regnskab. Slip for at sende papir og mails med bilag frem og tilbage.
