#24 Create carousel on frontpage

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/HomePage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/HomePage.utf8.properties
@@ -10,3 +10,10 @@ for.administrators.text=If you are an accountant or bookkeeper, you cant get our
 pricing=Prices
 pricing.text=Eazy accounting is free to use for 30 days, after that you pay for how many transactions you make, our prices are very reasonable.
 
+carousel.eazy.booking=Eazy accounting
+carousel.eazy.booking.explanation=Eazy for all users to get started. Eazy accounting can customized to your experience level.
+carousel.unlimited.units=Multiple business
+carousel.unlimited.units.explanation=You can create as many business as you want, you only pay for your usage.
+carousel.reports=Understandable reports
+carousel.reports.explanation=Reports, charts and excel export all make it eazy to keep track of how its going with your business.
+
