--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/HomePage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/HomePage_da.utf8.properties
@@ -10,4 +10,10 @@ for.administrators.text=Hvis du er revisor eller bogholder, kan du f\u00E5 dit e
 pricing=Priser
 pricing.text=Eazy regnskab er gratis at bruge i en periode p\u00E5 30 dage, derefter betaler du efter hvor mange bilag du bogf\u00F8rer. Vores prismodel er yderst rimelig .
 
+carousel.eazy.booking=Nem bogf\u00F8ring
+carousel.eazy.booking.explanation=Nemt for alle, Eazyregnskab kan konfigures til dit brugerniveau.
+carousel.unlimited.units=Ubegr\u00E6nset antal regnskaber
+carousel.unlimited.units.explanation=Du kan oprette s\u00E5 mange regnskaber du vil, du betaler kun for dit forbrug.
+carousel.reports=Overskuelige rapporter
+carousel.reports.explanation=Raporter, diagrammer og excel export g\u00F8r det nemt at f\u00E5 overblik over din virksomheds situation.
 
