#8 Create privacy page

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/AboutPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/AboutPage_da.utf8.properties
@@ -1,4 +1,4 @@
-title=Eazyregnskab - Om os
+title=Om os
 info.text.heading=Hvorfor skal bogf\u00F8ring v\u00E6re sv\u00E6rt?
 info.text=Hos Eazy regnskab mener vi at bogf\u00F8ring b\u00F8r v\u00E6re nemt, hurtigt og tilg\u00E6ngeligt alle steder. \
   Derfor har Eazy regnskab udviklet et bogf\u00F8ringsprogram som kan tilg\u00E5es s\u00E5l\u00E6nge du har en netforbindelse.
