--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/WhatYouGetPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/WhatYouGetPage.utf8.properties
@@ -1,4 +1,4 @@
-title=Eazy accounting - What you get
+title=What you get
 info.text.heading=All this and much more
 info.text=With Eazy accounting you get an eazy and manageable bookkeeping program.\
   In addition you can display mange different reports which give a quick overview over \
