--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/AppBasePage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/AppBasePage.utf8.properties
@@ -9,7 +9,7 @@ bookkeeping=Bookkeeping
 
 title=PAGE TITLE MISSING
 
-
+privacy=Privacy
 
 meta.keywords=eazy accounting bookkeeping annual report
 meta.description=Eazy accounting is a cheap online accounting program designed for all to use.
