--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/AppBasePage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/AppBasePage_da.utf8.properties
@@ -9,7 +9,7 @@ bookkeeping=Bogf\u00F8ring
 
 title=SIDE TITEL MANGLER
 
-
+privacy=Fortrolighedspolitik
 
 meta.keywords=nemt regnskab bogf\u00F8ring \u00E5rsrapport
 meta.description=Eazyregnskab er et online bogf\u00F8ringsprogram designet til at alle kan bruge det
