--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/ForAdministratorsPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/ForAdministratorsPage.utf8.properties
@@ -1,4 +1,4 @@
-title=Eazy accounting - For administrators
+title=For administrators
 info.text.heading=Get even closer to your customers
 info.text=As an accountant or bookkeeper you can get an administrator login to your customers account\
   og follow their accounts directly. No more sending papir and invoices over via delivery.
