--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/PricingPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/PricingPage.utf8.properties
@@ -1,27 +1,18 @@
-title=Eazy accounting - Pricing
+title=Pricing
 info.text.heading=Whats the cost?
 info.text=Our prices er very reasonable, you only pay for your usage.<br><br>\
           There are not extra add on modules or fees for extra users.<br><br>\
-          If you have below 300 postings&sup1; per fiscal year Eazy accounting is free&sup2;. <br>\
-          If you have between 300 and 3000 postings&sup1; per fiscal year, you only pay 5\u00A2 a month.<br>\
+          If you have below  3000 postings&sup1; per fiscal year, you only pay 5\u00A2 a month.<br>\
           If you have over 3000 postings&sup1; per fiscal year, you only pay 10 a month\u00A2.\
             <br>\
-           <table>\
+           <table class="table table-bordered">\
               <tr>\
-                  <td class="span2"> \
+                  <th class="span3"> \
                       Postings per fiscal year\
-                  </td>\
-                  <td class="span2"> \
+                  </th>\
+                  <th class="span2"> \
                       Price\
-                  </td>\
-              </tr>\
-              <tr>\
-                  <td>\
-                      300 <\
-                  </td>\
-                  <td>\
-                      FREE\
-                  </td>\
+                  </th>\
               </tr>\
               <tr>\
                   <td>\
@@ -53,7 +44,7 @@ info.text=Our prices er very reasonable, you only pay for your usage.<br><br>\
           <br>\
           <br>\
             &sup1; 3 posterings is roughly 1 ledger. <br>\
-            &sup2; Certain functions are only availeble for paying users. \uFFFD
+            &sup2; Certain functions are only availeble for paying users.
 
 meta.keywords=prices
 meta.description=Eazy accounting - Whats the cost?
