#32 Update prices to reflect multiple business units

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/PricingPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/PricingPage.utf8.properties
@@ -2,8 +2,8 @@ title=Pricing
 info.text.heading=Whats the cost?
 info.text=Our prices er very reasonable, you only pay for your usage.<br><br>\
           There are not extra add on modules or fees for extra users.<br><br>\
-          If you have below  3000 postings&sup1; per fiscal year, you only pay 5\u00A2 a month.<br>\
-          If you have over 3000 postings&sup1; per fiscal year, you only pay 10 a month\u00A2.\
+          If you have below  3000 postings&sup1; per fiscal year, you only pay 5\u00A2 a month for each business unit.<br>\
+          If you have over 3000 postings&sup1; per fiscal year, you only pay 10 a month\u00A2 each business unit.\
             <br>\
            <table class="table table-bordered">\
               <tr>\
