--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/PricingPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/PricingPage_da.utf8.properties
@@ -2,8 +2,8 @@ title=Priser
 info.text.heading=Hvor meget koster det?
 info.text=Vores priser er yderst rimelige, du betaler kun for dit forbrug. <br><br>\
   Der er ingen tilk\u00F8bsmoduller eller gebyrer ved ekstra brugere. <br><br>\
-  Hvis du har under 3000 posteringer&sup1; pr. regnskabs\u00E5r betaler du 30 DKK om m\u00E5neden.<br>\
-  Har du over 3000 posteringer&sup1; pr. regnskabs\u00E5r betaler du 70 DKK om m\u00E5neden. \
+  Hvis du har under 3000 posteringer&sup1; pr. regnskabs\u00E5r betaler du 30 DKK om m\u00E5neden pr. oprettet virksomhed<br>\
+  Har du over 3000 posteringer&sup1; pr. regnskabs\u00E5r betaler du 70 DKK om m\u00E5neden pr. oprettet virksomhed. \
   <br>\
  <table class="table table-bordered">\
     <tr>\
